<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".relativeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="244dp"
        android:text="@string/bambike"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="278dp"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="178dp"
        android:text="@string/bambikel"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="114dp"
        android:text="@string/bambiked"
        android:textColor="@android:color/background_dark" />

    <Button
        android:id="@+id/relativeNext"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="0dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/n"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/relativeBack"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignTop="@+id/relativeNext"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/b"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/bambike" />

</RelativeLayout>