<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".linearActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="373dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/manilaf" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/manila"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:text="@string/manilal"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:text="@string/manilad"
        android:textColor="@android:color/background_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/linearBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/b"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/linearNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/n"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</LinearLayout>